--- a/bitbucket-pipelines.yml
+++ b/bitbucket-pipelines.yml
@@ -12,5 +12,7 @@ pipelines:
           - docker
         script:
           - cd source/cpp && cmake . && make
-          - python3 setup.py install
+          - cd ../.. && sudo python3 setup.py install
+	  - cd unit_tests
+	  - python3 -m pytest test_project2.py
   
