--- a/bitbucket-pipelines.yml
+++ b/bitbucket-pipelines.yml
@@ -14,5 +14,5 @@ pipelines:
           - cd source/cpp && cmake . && make
           - cd ../.. && sudo python3 setup.py install
           - cd unit_tests
-          - python3 -m pytest test_2d_project.py && python3 -m pytest test_2d_advect.py
+          - python3 -m pytest test_2d_project.py && python3 -m pytest test_2d_advect.py && python3 -m pytest test_3d_advect.py
   
