--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -4,6 +4,7 @@ jobs:
     docker:
       - image: quay.io/fenicsproject/stable:latest
     steps:
+      - checkout
       - run:
           name: Installing DolfinParticles
           command: |
