--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -7,7 +7,8 @@ jobs:
       - checkout
       - run:
           name: Flake8 on source
-          python3 -m flake8 source/*
+          command:
+            python3 -m flake8 source/
       - run:
           name: Installing DolfinParticles
           command: |
