--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -21,6 +21,9 @@ jobs:
       - run:
           name: Flake8 on tests
           command:
+            python3 -m flake8 unit_tests/test_2d_project.py
+            python3 -m flake8 unit_tests/test_3d_advect.py
+            python3 -m flake8 unit_tests/test_3d_project.py
             python3 -m flake8 tests/scalar_advection/
       - run:
           name: Installing DolfinParticles
