--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -24,6 +24,9 @@ jobs:
             python3 -m flake8 unit_tests/test_2d_project.py
             python3 -m flake8 unit_tests/test_3d_advect.py
             python3 -m flake8 unit_tests/test_3d_project.py
+            python3 -m flake8 unit_tests/test_steady_stokes.py
+            python3 -m flake8 unit_tests/test_unsteady_stokes.py
+            python3 -m flake8 unit_tests/test_adddelete.py
             python3 -m flake8 tests/scalar_advection/
       - run:
           name: Installing DolfinParticles
