--- a/envs/environment.yml
+++ b/envs/environment.yml
@@ -1,4 +1,4 @@
-# To make a punc environment:
+# Make a leopart environment:
 #
 #   $ conda env create -f environment.yml
 
@@ -14,4 +14,4 @@ dependencies:
   - matplotlib
   - scipy
   - mpi4py
-  - fenics=2019.1.0
+  - conda-forge::fenics=2019.1.0
