Add documentation and tutorial

--- a/.gitignore
+++ b/.gitignore
@@ -4,6 +4,7 @@ results/
 deprecate/
 CMakeFiles/
 private_tests/
+dist/
 
 # Files
 *.pyc
@@ -18,6 +19,7 @@ cmake_install.cmake
 *.xml
 
 .cache/
+.coverage
 htmlcov/
 unit_tests/.coverage
 unit_tests/htmlcov/
